--- a/index.html
+++ b/index.html
@@ -7,6 +7,50 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <form method="post">
+
+        <fieldset>
+            <label for="firstName">First Name: </label>
+            <input type="text" id="firstName" name="firstName">
+        </fieldset>
+
+        <fieldset>
+            <label for="lastName">Last Name: </label>
+            <input type="text" id="lastName" name="lastName">
+        </fieldset>
+
+        <fieldset>
+            <label for="phone">Phone Number: </label>
+            <input type="tel" id="phone" name="phone">
+        </fieldset>
+
+        <fieldset>
+            <label for="country">Country: </label>
+            <input type="text" id="country" name="country">
+        </fieldset>
+
+        <fieldset>
+            <label for="zip">Zip Code: </label>
+            <input type="text" id="zip" name="zip">
+        </fieldset>
+
+        <fieldset>
+            <label for="email">Email: </label>
+            <input type="email" id="email" name="email">
+        </fieldset>
+
+        <fieldset>
+            <label for="password">Password: </label>
+            <input type="password" id="password" name="password">
+        </fieldset>
+
+        <fieldset>
+            <label for="confirm">Confirm Password: </label>
+            <input type="password" id="confirm" name="confirm">
+        </fieldset>
+
+    </form>
     
     <script src="./script.js"></script>
 </body>
