--- a/index.html
+++ b/index.html
@@ -12,42 +12,46 @@
 
         <fieldset>
             <label for="firstName">First Name: </label>
-            <input type="text" id="firstName" name="firstName">
+            <input type="text" id="firstName" name="firstName" required>
         </fieldset>
 
         <fieldset>
             <label for="lastName">Last Name: </label>
-            <input type="text" id="lastName" name="lastName">
+            <input type="text" id="lastName" name="lastName" required>
         </fieldset>
 
         <fieldset>
             <label for="phone">Phone Number: </label>
-            <input type="tel" id="phone" name="phone">
+            <input type="tel" id="phone" name="phone" required>
         </fieldset>
 
         <fieldset>
             <label for="country">Country: </label>
-            <input type="text" id="country" name="country">
+            <input type="text" id="country" name="country" required>
         </fieldset>
 
         <fieldset>
             <label for="zip">Zip Code: </label>
-            <input type="text" id="zip" name="zip">
+            <input type="text" id="zip" name="zip" required>
         </fieldset>
 
         <fieldset>
             <label for="email">Email: </label>
-            <input type="email" id="email" name="email">
+            <input type="email" id="email" name="email" required>
         </fieldset>
 
         <fieldset>
             <label for="password">Password: </label>
-            <input type="password" id="password" name="password">
+            <input type="password" id="password" name="password" required>
         </fieldset>
 
         <fieldset>
             <label for="confirm">Confirm Password: </label>
-            <input type="password" id="confirm" name="confirm">
+            <input type="password" id="confirm" name="confirm" required>
+        </fieldset>
+
+        <fieldset class="btn">
+            <button type="submit">Submit</button>
         </fieldset>
 
     </form>
