--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
         <fieldset>
             <label for="password">Password: </label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password" required placeholder="At least 8 characters" minlength="8">
         </fieldset>
 
         <fieldset>
             <label for="confirm">Confirm Password: </label>
-            <input type="password" id="confirm" name="confirm" required>
+            <input type="password" id="confirm" name="confirm" required placeholder="Enter password again" minlength="8">
         </fieldset>
 
         <fieldset class="btn">
