added the novalidate back

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <form method="post" novalidate>
+    <form method="post">
 
         <fieldset>
             <label for="firstName">First Name: </label>
