replaced tel with number

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <fieldset>
             <label for="phone">Phone Number: </label>
-            <input type="tel" id="phone" name="phone" required>
+            <input type="number" id="phone" name="phone" required>
         </fieldset>
 
         <fieldset>
